--- a/report.Rmd
+++ b/report.Rmd
@@ -35,6 +35,8 @@ Cox regression analysis was used to estimate hazard ratios (HRs), 95% confidence
 
 The random survival forest takes the binary survival tree as the basic unit and is an extension of the traditional binary decision tree.  When the input data passes through the nodes of the binary decision tree, it will be divided into two groups of data by the judgment conditions of the nodes until the input data are classified into the same category. Unlike the usual decision tree, the survival decision tree uses a log-rank test to determine the splits. The study first constructed a random survival forest with 100 decision trees. Based on the decreasing rate of error, 60 trees were determined to build our model. The information on the RSF model is given in the table.
 
+The efficiency of the prediction model was measured by the concordance index(C-index) and out-of-bag error rate (OOB error rate). The discrimination between the prediction value and the real value was calculated by C-index using the “pec” package. OOB error is a method of measuring the prediction error utilizing bootstrap aggregating (bagging). Bagging uses subsampling with replacement to create training samples for the model to learn from. OOB error is the mean prediction error on each training sample xi, using only the trees that did not have xi in their bootstrap sample. The OOB error rate of RSF is given straight from the model function and the study imitated the bootstrap 60 times to get the average OOB error rate for Cox regression. The model with a high C-index value and a low OOB error rate was considered to be efficient.
+
 
 # Result
 
