--- a/report.Rmd
+++ b/report.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 Breast cancer is the most common cancer among women in the United States. According to the survey, the average risk of a woman in the United States developing breast cancer is about 13%[1]. The survival prediction, especially 5-year survival analysis, was largely used to help doctors understand the prognosis, predict treatment efficiency and develop individualized treatment plans. In previous studies, machine learning was largely applied for its high accuracy and fewer assumption requirements. In this study, the survival prediction model was built based on data with 300998 cases and 9 variables extracted from the SEER research database. 
 
 #  Data Description
-Nine variables with potential effects on survival were selected, including Age, Race, ER_PR, HER, Tumor Size,  surgery, sex, Reginal and Stage. The Race was categorized into Asian, Black, White, America Indian, Native Hawaii and other Pacific islanders and others. ER_PR, the score of estrogen receptor/progesterone receptor tests. was reflected as 0, 1, 2, indicating ER-/PR-, ER+/PR- or ER-/PR+, ER+/PR+. And receiving surgery of removing the tissue in the primary site was also represented as Surgery. The outcome variable is survival time in months. 
+Nine variables with potential effects on survival were selected, including Age, Race, ER_PR, HER, Tumor Size,  surgery, sex, Reginal and Stage. The Race was categorized into Asian, Black, White, America Indian, Native Hawaii and other Pacific islanders and others. ER_PR, the score of estrogen receptor/progesterone receptor tests. was reflected as 0, 1, 2, indicating ER-/PR-, ER+/PR- or ER-/PR+, ER+/PR+. And receiving surgery of removing the tissue in the primary site was also represented as Surgery.And variable Reginal reflects the existence of positive lymph nodes. In addition, there was an interaction term between Tumor Size and Reginal. The outcome variable is survival time in months. 
 
 # Data Preprocessing
 Data from 2004-2014 was treated as train data while data from 2015 was treated as test data. Multivariate imputation by chained equations (MICE) was used to impute the covariates, assuming that the missing data were missing at random (MAR). Incomplete variables were imputed by separate models, including predictive mean matching for numeric variables, logistic regression for binary variables, bayesian polytomous regression for factor variables, and proportional odds model for ordinal variables. There are 93617 cases in the complete data after mice imputation. 
@@ -35,8 +35,7 @@ Cox regression analysis was used to estimate hazard ratios (HRs), 95% confidence
 
 The random survival forest takes the binary survival tree as the basic unit and is an extension of the traditional binary decision tree.  When the input data passes through the nodes of the binary decision tree, it will be divided into two groups of data by the judgment conditions of the nodes until the input data are classified into the same category. Unlike the usual decision tree, the survival decision tree uses a log-rank test to determine the splits. The study first constructed a random survival forest with 100 decision trees. Based on the decreasing rate of error, 60 trees were determined to build our model. The information on the RSF model is given in the table.
 
-The efficiency of the prediction model was measured by the concordance index(C-index) and out-of-bag error rate (OOB error rate). The discrimination between the prediction value and the real value was calculated by C-index using the “pec” package. OOB error is a method of measuring the prediction error utilizing bootstrap aggregating (bagging). Bagging uses subsampling with replacement to create training samples for the model to learn from. OOB error is the mean prediction error on each training sample xi, using only the trees that did not have xi in their bootstrap sample. The OOB error rate of RSF is given straight from the model function and the study imitated the bootstrap 60 times to get the average OOB error rate for Cox regression. The model with a high C-index value and a low OOB error rate was considered to be efficient.
-
+The efficiency of the prediction model was measured by the concordance index(C-index) and out-of-bag error rate (OOB error rate). The discrimination between the prediction value and the real value was calculated by C-index using the “pec” package. OOB error is a method of measuring the prediction error utilizing bootstrap aggregating (bagging). Bagging uses sub-sampling with replacement to create training samples for the model to learn from. OOB error is the mean prediction error on each training sample xi, using only the trees that did not have xi in their bootstrap sample. The OOB error rate of RSF is given straight from the model function and the study imitated the bootstrap 60 times to get the average OOB error rate for Cox regression. The model with a high C-index value and a low OOB error rate was considered to be efficient.
 
 # Result
 
@@ -46,13 +45,13 @@ The efficiency of the prediction model was measured by the concordance index(C-i
 
 Adjusting for other variables, it was determined that the key predictor variables influencing survival probability includes sex (HR=0.78,  95%CI=[0.68,0.88]), age(HR=1.03, 95% CI=[1.03,1.04]), all groups in ER_PR(HR=0.70, 95% CI=[0.66,0.73] and HR=0.51,95% CI=[0.49,0.53]), surgery (HR=0.34, 95% CI=[0.32,0.35]),  and HER2 (HR=1.25, 95%CI=[1.20,1.31]). 
 
-For binary variables, females were predicted to have longer survival time than males. Having surgery and a positive HER2 test result also indicate a higher chance of survival. For the continuous variables, it was observed that as age increases, the predicted survival time decreases. And patients with more ER and PR tests being positive were predicted to have a longer survival time. 
+For binary variables, females were predicted to have longer survival time than males. Receiving surgery or a positive HER2 test result also indicate a higher chance of survival. For the continuous variables, it was observed the predicted survival time decreases as age increases. And patients with more ER and PR tests being positive were predicted to have a longer survival time. 
 
-What’s more, for categorical variables, the relationship between survival months and each variable becomes more complicated. Compared to the reference group, stage I (HR=0.82, 95% CI=[0.59,1.14]) and  stage II (HR=1.26, 95% CI=[0.97,1.76]) were observed to be insignificant. However, patients at stage  III(HR=1.95, 95% CI=[1.40,2.72]) and IV (HR=3.98, 95% CI=[2.86,5.55]) were predicted to have shorter survival time. Moreover, from stage II to stage IV, the hazard ratio increases dramatically. 
+What’s more, for categorical variables, the relationship between survival months and each variable becomes more complicated. Compared to the reference group, stage I (HR=0.82, 95% CI=[0.59,1.14]) and  stage II (HR=1.26, 95% CI=[0.97,1.76]) were observed to be insignificant. However, patients at stage  III(HR=1.95, 95% CI=[1.40,2.72]) and IV (HR=3.98, 95% CI=[2.86,5.55]) were predicted to have shorter survival time. Especially in stage IV, the hazard ratio increases dramatically. 
 
-The effect of tumor size on survival months is also complicated. Compared to the reference group, a tumor size of 40-50 (HR=0.28, 95%CI=[0.01,6.47]) and a tumor size of 50-60 (HR=1.84, 95% CI=[0.98,3.47]) has an opposite effect on survival months. And the interaction term between tumor size and potential confounder lymph nodes was still insignificant. 
+The effect of tumor size on survival months is also complicated. Compared to the reference group, a tumor size of 40-50mm (HR=0.28, 95%CI=[0.01,6.47]) and a tumor size of 50-60mm (HR=1.84, 95% CI=[0.98,3.47]) has an positive effect on survival months, which is inconsistent with previous study. And the interaction term between Tumor Size and Reginal was still insignificant. 
  
-Lastly, when comparing survival months among different races, Asian is treated as the reference group. Black (HR=1.31, 95% CI=[1.23,1.40]), White (HR=1.06, 95% CI=[1.00,1.12]), America Indian(HR=1.22, 955CI=[1.04, 1.42] and Native Hawaii and other Pacific islanders (HR=1.18, 95% CI=[1.05,1.33]) have a significantly higher hazard ratio, reflecting a higher risk of death.
+Lastly, by comparing survival months among different races, Asian is treated as the reference group. Black (HR=1.31, 95% CI=[1.23,1.40]), White (HR=1.06, 95% CI=[1.00,1.12]), America Indian(HR=1.22, 955CI=[1.04, 1.42] and Native Hawaii and other Pacific islanders (HR=1.18, 95% CI=[1.05,1.33]) have a significantly higher hazard ratio, reflecting a higher risk of death.
 
 # fig2
 
