--- a/report.Rmd
+++ b/report.Rmd
@@ -14,7 +14,7 @@ fontsize: 12pt
 
 ```{r setup, include=FALSE}
 # header-includes: \usepackage{setspace}\doublespacing
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE,warning = FALSE,message=FALSE)
 ```
 ```{r}
 library(ggplot2)
@@ -55,7 +55,44 @@ The efficiency of the prediction model was measured by the concordance index(C-i
 
 ### Cox Proportional Hazard Model
 
-### fig1
+```{r,,fig.height=10,fig.width=20}
+library(forestplot)
+result <- read.csv("forest.csv",header=TRUE,sep=',')
+#knitr::kable(head(data),booktabs = TRUE,align='c')
+#head(result)
+
+fig1<- forestplot(result[,c(1,2,3)], 
+                  mean=result[,4],   
+                  lower=result[,5],  
+                  upper=result[,6],  
+                  zero=1,            
+                  boxsize=0.6,      
+                  graph.pos= 2,
+                  hrzl_lines=list("1" = gpar(lty=1,lwd=2),
+                                  "2" = gpar(lty=2)),
+                  xticks=c(0,0.8,1.6,2.4,3.2,4,4.8,5.6,6.4) ,
+                  is.summary=c(T,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F,F),
+                  txt_gp=fpTxtGp(label=gpar(cex=1.25),
+                                 ticks=gpar(cex=1.1),
+                                 xlab=gpar(cex = 1.2),
+                                 title=gpar(cex = 1.2)),
+                  graphwidth=unit(150,"mm"),
+                  lwd.zero=1,
+                  lwd.ci=1.5,
+                  lwd.xaxis=2, 
+                  lty.ci=1.5,
+                  ci.vertices =T,
+                  ci.vertices.height=0.2, 
+                  clip=c(0.1,6.4),
+                  ineheight=unit(4, 'mm'), 
+                  line.margin=unit(4, 'mm'),
+                  colgap=unit(10, 'mm'),
+                  fn.ci_norm="fpDrawDiamondCI",
+                  col=fpColors(box ='#021eaa', 
+                               lines ='#021eaa', 
+                               zero = "black"))       
+fig1
+```
 
 Adjusting for other variables, it was determined that the key predictor variables influencing survival probability includes sex (HR=0.78,  95%CI=[0.68,0.88]), age(HR=1.03, 95% CI=[1.03,1.04]), all groups in ER_PR(HR=0.70, 95% CI=[0.66,0.73] and HR=0.51,95% CI=[0.49,0.53]), surgery (HR=0.34, 95% CI=[0.32,0.35]),  and HER2 (HR=1.25, 95%CI=[1.20,1.31]). 
 
@@ -67,16 +104,68 @@ The effect of tumor size on survival months is also complicated. Compared to the
  
 Lastly, by comparing survival months among different races, Asian is treated as the reference group. Black (HR=1.31, 95% CI=[1.23,1.40]), White (HR=1.06, 95% CI=[1.00,1.12]), America Indian(HR=1.22, 955CI=[1.04, 1.42] and Native Hawaii and other Pacific islanders (HR=1.18, 95% CI=[1.05,1.33]) have a significantly higher hazard ratio, reflecting a higher risk of death.
 
-# fig2
+```{r,fig.height=7,fig.width=12}
+library(dplyr)
+library(rms)
+trainc <- read.csv("train.csv")
+train_cox <- trainc %>% dplyr::select("age","sex","months","HER","race_6","stage","ER_PR","surgery","real_tumor","reginal","status5")
+colnames(train_cox) <- c("Age","Sex","months","HER","Race","Stage","ER_PR","Surgery","Tumor_Size","Reginal","status5")
+ddist <- datadist(train_cox) 
+options(datadist='ddist')
+f <- cph(Surv(months,status5==2)~Age+Sex+HER+Race+Stage+ER_PR+Surgery+Tumor_Size+Reginal,x=T, y=T,surv=T,data=train_cox, time.inc=60)
+surv <- Survival(f)
+nom2 <- nomogram(f,fun=function(x) surv(60, x),lp=F, funlabel="5 year survival",maxscale=100,fun.at=c(0.99, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3,0.2,0.1,0.05))
+plot(nom2)
+```
 
 The significance of variables is determined by the effect estimates and is influenced by co-variables. In this figure, age contributes the most to the outcome thus it is assigned 100 points. In proportion to the most effective variable, the rest are assigned a point according to their effect size. Relative importance could be understood by comparing the most significant variable (Age) to the least significant variable (HER).
-# fig3
+
+```{r,fig.height=4,fig.width=4}
+library(survminer)
+f2 <- survfit(Surv(months,status5==2)~trainc$ER_PR, data=trainc)
+s2 <- ggsurvplot(f2,data=trainc, pval = T,#conf.int = TRUE,
+                 conf.int.alpha=0.3,#conf.int.style="step",
+                 #pval.coord = c(5, 0.05), 
+                 pval.method = T,
+                 #pval.method.coord = c(0, 0.05),
+                 #surv.median.line = "hv", 
+                 #risk.table = 'nrisk_cumcensor',#tables.height = 0.2,
+                 #surv.scale = 'percent',
+                 break.y.by=0.2,
+                 #risk.table.y.text = FALSE,
+                 legend.title="ER_PR",
+                 #legend = c(0.28, 0.45),
+                 font.legend = 12,
+                 ylab="Probability of survival",xlab = "Months since diagnosis", 
+                 break.x.by = 10)
+s2
+f3 <- survfit(Surv(months,status5==2)~trainc$HER, data=trainc)
+s3 <- ggsurvplot(f3,data=trainc, pval = T,#conf.int = TRUE,
+                 conf.int.alpha=0.3,#conf.int.style="step",
+                 #pval.coord = c(5, 0.05),
+                 pval.method = T,
+                 #pval.method.coord = c(0, 0.05),
+                 #surv.median.line = "hv", 
+                 #risk.table = 'nrisk_cumcensor',#tables.height = 0.2,
+                 #surv.scale = 'percent',
+                 break.y.by=0.2,
+                 #risk.table.y.text = FALSE,
+                 legend.title="HER",
+                 #legend = c(0.28, 0.45),
+                 font.legend = 12,
+                 ylab="Probability of survival",xlab = "Months since diagnosis", 
+                 break.x.by = 10)
+s3
+```
 
 Kaplan-Meier plots showed the survival curves using the log-rank test for the comparison of HER and ER_PR variables correspondingly. The p-value in each graph indicates a significant difference in survival curves among groups. For the ER_PR variable, three survival curves have clear separation without intersection. For the HER variable, a separation is not clear enough, we can still make the inference that a positive HER indicates a smaller risk of death.
 
 ### Model Result
 
-# fig4
+```{r,echo=TRUE}
+o <-  rfsrc(Surv(months,status5==2)~sex+age+ER_PR+race_6+real_tumor+surgery+HER+stage+reginal, trainc, nsplit = 10, ntree = 50,block.size = 1)
+print(o)
+```
 
 The OOB(Out-of-bag) scores for the Cox proportional hazard model and random forest model are 0.256 and 0.255, which indicates that they predicted the OOB samples with 74.4% accuracy and 74.5% accuracy, respectively. The C-index calculated from the Cox proportional hazard model is 0.745 in training data and 0.539 in test data. The C-index calculated from the random forest model is 0.801 in training data and 0.671 in test data.
 
