--- a/report.Rmd
+++ b/report.Rmd
@@ -33,7 +33,7 @@ library(mice)
 
 # Introduction
 
-Breast cancer is the most common cancer among women in the United States. According to the survey, the average risk of a woman in the United States developing breast cancer is about 13%[1].The survival prediction, especially 5-year survival analysis, was largely used to help doctors understand the prognosis, predict treatment efficiency and develop individualized treatment plans. In previous studies, machine learning was largely applied for its high accuracy and fewer assumption requirements. In this study, the survival prediction model was built based on data with 300998 cases and 9 variables extracted from the SEER research database. 
+Breast cancer is the most common cancer among women in the United States.The survival prediction, especially 5-year survival analysis, was largely used to help doctors understand the prognosis, predict treatment efficiency and develop individualized treatment plans. In previous studies, machine learning was largely applied for its high accuracy and fewer assumption requirements. In this study, the survival prediction model was built based on data with 300998 cases and 9 variables extracted from the SEER research database. 
 
 #  Data Description
 Nine variables with potential effects on survival were selected, including Age, Race, ER_PR, HER, Tumor Size,  surgery, sex, Reginal and Stage. The Race was categorized into Asian, Black, White, America Indian, Native Hawaii and other Pacific islanders and others. ER_PR, the score of estrogen receptor/progesterone receptor tests. was reflected as 0, 1, 2, indicating ER-/PR-, ER+/PR- or ER-/PR+, ER+/PR+. And receiving surgery of removing the tissue in the primary site was also represented as Surgery.And variable Reginal reflects the existence of positive lymph nodes. In addition, there was an interaction term between Tumor Size and Reginal. The outcome variable is survival time in months. 
@@ -168,17 +168,15 @@ The OOB(Out-of-bag) scores for the Cox proportional hazard model and random fore
 
 The C-index in both Cox proportional hazard model and the random forest model is bigger than 0.5, which reflects that they are prediction models with good fits. And the C-index score of the random survival forest is higher than the score of the Cox proportional hazard model, which also indicates that the random survival forest has a higher model fit and prediction accuracy. Machine learning methods have higher accuracy, fewer required assumptions,  and a higher capacity to deal with big data. And that’s why it was applied in this study. On the other hand, compared to train data, the C-index in test data is lower. With the development of treatment, early detection of breast cancer and improved diagnosis accuracy, there might be bias by using train data from 2004 to 2014 to predict test data from 2005.
 
-Here are the limitations of the study. The tumor size was observed to be insignificant, which is inconsistent with previous studies. The effect of tumor size on survival prediction is associated with the number of positive lymph nodes(LNs). It has been indicated that small tumors with more than four positive LNs might be more aggressive diseases compared to bigger tumors[2]. In addition, stage I showed an insignificant result. In previous studies, stage 0 and stage I were combined together and treated as one reference group because both survival rate is almost 100%[4]. That might explain why it’s insignificant in this study. 
+Here are the limitations of the study. The tumor size was observed to be insignificant, which is inconsistent with previous studies. The effect of tumor size on survival prediction is associated with the number of positive lymph nodes(LNs). It has been indicated that small tumors with more than four positive LNs might be more aggressive diseases compared to bigger tumors[1]. In addition, stage I showed an insignificant result. In previous studies, stage 0 and stage I were combined together and treated as one reference group because both survival rate is almost 100%[3]. That might explain why it’s insignificant in this study. 
 
 # Reference
 
-[1]Breast cancer statistics: How common is breast cancer? American Cancer Society. (n.d.). Retrieved December 17, 2022, from https://www.cancer.org/cancer/breast-cancer/about/how-common-is-breast-cancer.html 
+[1]Liu Y, He M, Zuo WJ, Hao S, Wang ZH, Shao ZM. Tumor Size Still Impacts Prognosis in Breast Cancer With Extensive Nodal Involvement. Front Oncol. 2021 Apr 9;11:585613. doi: 10.3389/fonc.2021.585613. PMID: 33898305; PMCID: PMC8064390. 
 
-[2]Liu Y, He M, Zuo WJ, Hao S, Wang ZH, Shao ZM. Tumor Size Still Impacts Prognosis in Breast Cancer With Extensive Nodal Involvement. Front Oncol. 2021 Apr 9;11:585613. doi: 10.3389/fonc.2021.585613. PMID: 33898305; PMCID: PMC8064390. 
+[2]Balabram D, Turra CM, Gobbi H. Survival of patients with operable breast cancer (Stages I-III) at a Brazilian public hospital--a closer look into cause-specific mortality. BMC Cancer. 2013 Sep 24;13:434. doi: 10.1186/1471-2407-13-434. PMID: 24063763; PMCID: PMC3849091.
 
-[3]Balabram D, Turra CM, Gobbi H. Survival of patients with operable breast cancer (Stages I-III) at a Brazilian public hospital--a closer look into cause-specific mortality. BMC Cancer. 2013 Sep 24;13:434. doi: 10.1186/1471-2407-13-434. PMID: 24063763; PMCID: PMC3849091.
+[3]Elobaid, Y., Aamir, M., Grivna, M., Suliman, A., Attoub, S., Mousa, H., Ahmed, L. A., & Oulhaj, A. (n.d.). Breast cancer survival and its prognostic factors in the United Arab Emirates: A retrospective study. PLOS ONE. Retrieved December 17, 2022, from https://journals.plos.org/plosone/article?id=10.1371%2Fjournal.pone.0251118 
 
-[4]Elobaid, Y., Aamir, M., Grivna, M., Suliman, A., Attoub, S., Mousa, H., Ahmed, L. A., & Oulhaj, A. (n.d.). Breast cancer survival and its prognostic factors in the United Arab Emirates: A retrospective study. PLOS ONE. Retrieved December 17, 2022, from https://journals.plos.org/plosone/article?id=10.1371%2Fjournal.pone.0251118 
-
-[5]Understanding breast cancer survival rates. Susan G. Komen®. (2022, July 20). Retrieved December 17, 2022, from https://www.komen.org/breast-cancer/facts-statistics/breast-cancer-statistics/survival-rates/ 
+[4]Understanding breast cancer survival rates. Susan G. Komen®. (2022, July 20). Retrieved December 17, 2022, from https://www.komen.org/breast-cancer/facts-statistics/breast-cancer-statistics/survival-rates/ 
 
